--- a/css/brands.css
+++ b/css/brands.css
@@ -725,7 +725,7 @@ button:hover,
 /* WhatsApp */
 .button.button-whatsapp {
   color: #ffffff;
-  background-color: #455a64;
+  background-color: #25D366;
 }
 .button.button-whatsapp:hover,
 .button.button-whatsapp:focus {
