--- a/css/brands.css
+++ b/css/brands.css
@@ -34,7 +34,7 @@ body {
   line-height: 24px;
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-image: src('path/to/your/Back.jpg'); /* Replace with the path to your image or the image URL */
+  background-image: url('images/Back.jpg'); /* Replace with the path to your image or the image URL */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
