--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
   }
