--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,10 @@ body {
     min-height: 100vh;
     
   }
+  .particle-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+  }
+  
