--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,4 @@
 body {
-    background-image: url('../images/Back.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-    
-  }
-  .particle-container {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-  }
-  /* ---- reset ---- */
-  {
     margin: 0;
     font:normal 75% Arial, Helvetica, sans-serif;
   }
@@ -32,7 +15,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #b61924;
-    background-image: url("");
+    background-image: url("../images/Back.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
@@ -71,5 +54,4 @@ body {
   }
   
   .count-particles{
-    border-radius: 0 0 3px 3px;
-  }
+    bor
