--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #b61924;
+    background-color: #000000;
     background-image: url("../images/Back.jpg");
     background-repeat: no-repeat;
     background-size: cover;
